// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeerList should add peer 1`] = `
<DocumentFragment>
  <div>
    <div
      class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
    >
      <div
        class="fixed z-50 w-full h-full bg-black opacity-50"
        data-testid="modal__overlay"
      />
      <div
        class="sc-fznZeY dyichR absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
        >
          <button
            class="sc-AxjAm goVygI w-11 h-11"
            color="primary"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="sc-AxirZ fFqjhX"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="relative"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Custom Peer
          </h2>
          <div
            class="flex-1"
          >
            <form
              class="space-y-8"
              data-testid="Form"
            >
              <fieldset
                class="sc-AxheI dThsOi my-8"
              >
                <label
                  class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                  data-testid="FormLabel"
                  for="network"
                >
                  Cryptoasset
                  <div
                    class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                    data-testid="FormLabel__required"
                  />
                </label>
                <div>
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="CustomPeers__network-menu"
                    data-testid="SelectNetwork"
                    role="combobox"
                  >
                    <label
                      for="CustomPeers__network-input"
                      id="CustomPeers__network-label"
                    />
                    <div
                      class="sc-fzpans diytpf"
                      data-testid="SelectNetworkInput"
                    >
                      <div
                        class="sc-AxmLO sc-fzozJi flvnfR px-4"
                      >
                        <div
                          class="sc-fzokOt kLNUey border-theme-neutral-light text-theme-neutral"
                          data-testid="SelectNetworkInput__network"
                        />
                      </div>
                      <input
                        aria-autocomplete="list"
                        aria-controls="CustomPeers__network-menu"
                        aria-labelledby="CustomPeers__network-label"
                        autocomplete="off"
                        class="sc-Axmtr dEPowd overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
                        data-testid="SelectNetworkInput__input"
                        id="CustomPeers__network-input"
                        placeholder="Enter a cryptoasset name"
                        value=""
                      />
                    </div>
                  </div>
                  <ul
                    aria-labelledby="CustomPeers__network-label"
                    class="hidden"
                    id="CustomPeers__network-menu"
                    role="listbox"
                  />
                </div>
              </fieldset>
              <fieldset
                class="sc-AxheI dThsOi flex flex-col space-y-2"
              >
                <label
                  class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                  data-testid="FormLabel"
                  for="name"
                >
                  Name
                  <div
                    class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                    data-testid="FormLabel__required"
                  />
                </label>
                <input
                  class="sc-Axmtr dEPowd overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                  data-testid="Input"
                  name="name"
                />
              </fieldset>
              <fieldset
                class="sc-AxheI dThsOi flex flex-col space-y-2"
              >
                <label
                  class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                  data-testid="FormLabel"
                  for="peer-ip"
                >
                  IP
                  <div
                    class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                    data-testid="FormLabel__required"
                  />
                </label>
                <input
                  class="sc-Axmtr dEPowd overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                  data-testid="Input"
                  name="peer-ip"
                />
              </fieldset>
              <fieldset
                class="sc-AxheI dThsOi flex flex-col space-y-2"
              >
                <label
                  class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                  data-testid="FormLabel"
                  for="peer-type"
                >
                  Type
                  <div
                    class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                    data-testid="FormLabel__required"
                  />
                </label>
                <label
                  class="inline-flex items-center"
                  for="multisig"
                >
                  <input
                    class="sc-AxgMl ldaxEm"
                    color="success"
                    type="checkbox"
                  />
                  <span
                    class="ml-2 text-sm font-semibold text-theme-neutral-dark"
                  >
                    Multisignature
                  </span>
                </label>
              </fieldset>
              <div
                class="flex justify-end mt-4"
              >
                <button
                  class="sc-AxjAm kbZyZT"
                  color="primary"
                  data-testid="peer-list__add-button"
                  type="submit"
                >
                  Add Peer
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-AxiKw gGhpZ -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Cryptoasset
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Name
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  IP
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div>
                  Type
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhUy iIfeGO group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH space-x-2"
              >
                <div
                  class="sc-fzokOt kLPAEf text-logo border-theme-danger-light"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
                <span>
                  ARK
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  ROBank
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  194.168.4.67:800
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF text-theme-neutral justify-center"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf text-theme-neutral-300"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="float-right outline-none cursor-pointer focus:outline-none"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="sc-AxhUy iIfeGO group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH space-x-2"
              >
                <div
                  class="sc-fzokOt kLPAEf border-theme-neutral-300"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  />
                </div>
                <span>
                  ETHEREUM
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  MATBank
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  194.168.4.67:800
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF text-theme-neutral justify-center"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf text-theme-neutral-300"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="float-right outline-none cursor-pointer focus:outline-none"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="sc-AxhUy iIfeGO group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH space-x-2"
              >
                <div
                  class="sc-fzokOt kLPAEf text-theme-warning-400 border-theme-warning-200"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  />
                </div>
                <span>
                  BITCOIN
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  OLEBank
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  194.168.4.67:800
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF text-theme-neutral justify-center"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf text-theme-neutral-300"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="float-right outline-none cursor-pointer focus:outline-none"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="sc-AxjAm hXnHfM w-full mt-8 mb-2"
      color="primary"
      data-testid="peer-list__add-button"
      type="button"
    >
      Add Peer
    </button>
  </div>
</DocumentFragment>
`;

exports[`PeerList should render 1`] = `
<DocumentFragment>
  <div>
    <div
      class="sc-AxiKw gGhpZ -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Cryptoasset
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Name
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  IP
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div>
                  Type
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhUy iIfeGO group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH space-x-2"
              >
                <div
                  class="sc-fzokOt kLPAEf text-logo border-theme-danger-light"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
                <span>
                  ARK
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  ROBank
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  194.168.4.67:800
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF text-theme-neutral justify-center"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf text-theme-neutral-300"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="float-right outline-none cursor-pointer focus:outline-none"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="sc-AxhUy iIfeGO group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH space-x-2"
              >
                <div
                  class="sc-fzokOt kLPAEf border-theme-neutral-300"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  />
                </div>
                <span>
                  ETHEREUM
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  MATBank
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  194.168.4.67:800
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF text-theme-neutral justify-center"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf text-theme-neutral-300"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="float-right outline-none cursor-pointer focus:outline-none"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="sc-AxhUy iIfeGO group"
            data-testid="TableRow"
          >
            <td>
              <div
                class="sc-AxhCb osoeH space-x-2"
              >
                <div
                  class="sc-fzokOt kLPAEf text-theme-warning-400 border-theme-warning-200"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  />
                </div>
                <span>
                  BITCOIN
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  OLEBank
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF"
              >
                <span>
                  194.168.4.67:800
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb kdNpYF text-theme-neutral justify-center"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxhCb dazjdf text-theme-neutral-300"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="float-right outline-none cursor-pointer focus:outline-none"
                  >
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="sc-AxjAm hXnHfM w-full mt-8 mb-2"
      color="primary"
      data-testid="peer-list__add-button"
      type="button"
    >
      Add Peer
    </button>
  </div>
</DocumentFragment>
`;

exports[`PeerList should render with empty peer list 1`] = `
<DocumentFragment>
  <div>
    <div
      class="sc-AxiKw gGhpZ -mt-3"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            class="border-b border-theme-neutral-300"
            role="row"
          >
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Cryptoasset
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Name
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  IP
                </div>
              </div>
            </th>
            <th
              class="relative text-sm text-left select-none text-theme-neutral m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top flex justify-center"
              >
                <div>
                  Type
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
    <button
      class="sc-AxjAm hXnHfM w-full mt-8 mb-2"
      color="primary"
      data-testid="peer-list__add-button"
      type="button"
    >
      Add Peer
    </button>
  </div>
</DocumentFragment>
`;
